--- a/src/Header.css
+++ b/src/Header.css
@@ -1,6 +1,8 @@
 #Header-bar {
-  border: 5px solid black;
-  /* position: fixed; */
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  /* width: 1000px; */
+  position: fixed;
   /* max-width: 100%; */
   text-align: center;
   letter-spacing: 1.5em;
@@ -9,3 +11,12 @@
   background-color: aqua;
 }
 
+#Header-container {
+    /* bottom: 0;
+      position: fixed; */
+      /*margin-top: auto;*/
+      /* width: 100%;
+      height: 50px;
+      background-color: aqua;
+      border-style: solid; */
+}
